Add node_modules, .env, and firebase.js to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-node_modules
+# Ignore node_modules folder
+node_modules/
+
+# Ignore environment files
+.env
+
+# Ignore firebase.js (contains sensitive information)
+firebase.js
