--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node.js": "^0.0.1-security",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "@vercel/node": "^1.0.0"
   },
   "name": "real-estate",
   "version": "1.0.0",
