--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@vercel/node": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -13,14 +14,13 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node.js": "^0.0.1-security",
-    "nodemon": "^3.1.4",
-    "@vercel/node": "^1.0.0"
+    "nodemon": "^3.1.4"
   },
   "name": "real-estate",
   "version": "1.0.0",
   "main": "index.js",
-  "engines": { 
-  "node": "20.x" 
+  "engines": {
+    "node": "20.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
